@@ -1,6 +1,7 @@
 0.9.14.beta
 
-- added GitModule for inclusion in projects.
+- added RakishProject#moduleConfigurationDir for the location of platform specific configuration cache.
+- added GitModule for inclusion in projects for convenient git operations
 - Configuration initializer now called in directory of declaring file.
 - changed RakishProject#moduleName to projectName
 - added FileSet#update with an optional :exclude option.
